# Splices

./: README.md  io.github.swordpuffin.splices.json  meson.build  org.swordpuffin.splices.json
.flatpak-builder/cache/refs/heads/x86_64-org.swordpuffin.splices.json/: build-splices  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-org.swordpuffin.splices.json
.flatpak-builder/git/https_github.com_SwordPuffin_Splices.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_SwordPuffin_Splices.git/objects/pack/: pack-0cdece75bb48d6c718a245cad701915ef7e59577.idx  pack-0cdece75bb48d6c718a245cad701915ef7e59577.pack  pack-0cdece75bb48d6c718a245cad701915ef7e59577.rev  pack-6a3591fb7e962e038405423f1a3c34f71d1b509b.idx  pack-6a3591fb7e962e038405423f1a3c34f71d1b509b.pack  pack-6a3591fb7e962e038405423f1a3c34f71d1b509b.rev
.flatpak-builder/git/https_github.com_SwordPuffin_Splices.git/refs/heads/: master
data/: io.github.swordpuffin.splices.gschema.xml  io.github.swordpuffin.splices.metainfo.xml.in  meson.build  org.swordpuffin.splices.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build  nl.po
src/: Word Generator.py  main.py  meson.build  splices.gresource.xml  splices.in  style.css  window.py  window.ui  words.txt
src/gtk/: help-overlay.ui
